Fixed gap between content container and top menu

--- a/module/htdocs/css/custom/layout.css
+++ b/module/htdocs/css/custom/layout.css
@@ -50,6 +50,11 @@ body {
     height: 40px;
 }
 
+#content_container {
+  padding-top: 5px;
+  padding-bottom: 15px;
+}
+
 .container {
     padding: 0 15px;
     width: auto;
@@ -219,7 +224,7 @@ body {
 }
 
 .no-margin {
-    margin : 0 !important;
+  margin : 0 !important;
 }
 
 .no-border {
